<resources>
    <string name="app_name">Swift Switch</string>
    <string name="text_default_value">Please  enter the text for PTX</string>
    <string name="phoneAccountHint">手机号</string>
    <string name="emailAccountHint">邮箱</string>
    <string name="passwordHint">密码</string>
    <string name="loginingTipWord">正在登陆</string>
    <string name="successfulLoginTipWord">登陆成功</string>
    <string name="unsuccessfulLoginTipWord">登陆失败</string>
    <string name="loginFragmentTopBarTitle">来登陆吧！</string>
    <integer name="temporaryTipShowTimeInMillis">500</integer>
    <string name="switchToEmailLoginHint">切换到邮箱登陆</string>
    <string name="switchToPhoneLoginHint">切换到手机登陆</string>
    <string name="loginButtonText">登陆</string>
    <string name="accountTitleText">账号</string>
    <string name="passwordTitleText">密码</string>
    <string name="newSongListCreationTitleText">名儿</string>
    <string name="newSongListCreationHint">我的新歌单已经饥渴难耐了</string>
    <string name="newSongListCreationButtonText">给我建他娘的！</string>
    <string name="songListCreationFragmentTopBarTitle">给老子来个新歌单</string>
    <string name="successfulSongListCreationTip">创建成功！</string>
    <string name="unsuccessfulCreationTipForAlreadyExistedSongList">重名了喔</string>
    <string name="unsuccessfulCreationTipForEmptySongListName">写点儿东西再创建8</string>
    <string name="mainActivityFragmentTopBarTitle">我的</string>
    <string name="textOnItemToAllSong">所有歌曲</string>
    <string name="textOnItemToAllSongList">所有歌单</string>
    <string name="allSongListsFragmentTopBarTitle">所有歌单</string>
    <string name="defaultNameOfSongListOfAllSongs">所有歌曲</string>
    <integer name="networkTimeout">3000</integer>

</resources>
