<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/accountEditText"
        android:layout_width="332dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/phoneAccountHint"
        android:inputType="phone"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTopBar" />

    <TextView
        android:id="@+id/accountTitleTextView"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:text="@string/accountTitleText"
        app:layout_constraintBottom_toBottomOf="@+id/accountEditText"
        app:layout_constraintEnd_toStartOf="@+id/accountEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/accountEditText" />

    <com.qmuiteam.qmui.alpha.QMUIAlphaButton
        android:id="@+id/loginButton"
        android:layout_width="169dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:text="@string/loginButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <com.qmuiteam.qmui.alpha.QMUIAlphaButton
        android:id="@+id/switchLoginTypeButton"
        android:layout_width="169dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/switchToEmailLoginHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@+id/loginTopBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:tooltipText="hhafgfghgfh"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="332dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountEditText" />

    <TextView
        android:id="@+id/passwordTitleTextView"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:text="@string/passwordTitleText"
        app:layout_constraintBottom_toBottomOf="@+id/passwordEditText"
        app:layout_constraintEnd_toStartOf="@+id/passwordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passwordEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>