<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/newSongListEditText"
        android:layout_width="332dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/newSongListCreationHint"
        android:inputType="text"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newSongListCreationTopBar"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/newSongListCreationTitleTextView"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:text="@string/newSongListCreationTitleText"
        app:layout_constraintBottom_toBottomOf="@+id/newSongListEditText"
        app:layout_constraintEnd_toStartOf="@+id/newSongListEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newSongListEditText" />

    <com.qmuiteam.qmui.alpha.QMUIAlphaButton
        android:id="@+id/newSongListCreationButton"
        android:layout_width="169dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:text="@string/newSongListCreationButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newSongListEditText" />

    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@+id/newSongListCreationTopBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>